# rustprac

./: .gitignore  Cargo.toml
Ownership/src/: main.rs
basicTypes_Numbers/char-bol-unit/: Cargo.toml
basicTypes_Numbers/char-bol-unit/src/: main.rs
basicTypes_Numbers/functions/src/: main.rs
basicTypes_Numbers/numbers/src/: main.rs
basicTypes_Numbers/statement-expression/: Cargo.toml
basicTypes_Numbers/statement-expression/src/: main.rs
borrowing/src/: main.rs
collectionTypes/hashmapColection/: Cargo.toml
collectionTypes/hashmapColection/src/: main.rs
collectionTypes/string/src/: main.rs
collectionTypes/stringstype/: Cargo.toml
collectionTypes/stringstype/src/: main.rs
collectionTypes/vectorCollection/: Cargo.toml
collectionTypes/vectorCollection/src/: main.rs
component-types/array/src/: main.rs
component-types/eenum/: Cargo.toml
component-types/eenum/src/: main.rs
component-types/slice/src/: main.rs
component-types/sstruct/src/: main.rs
component-types/string/src/: main.rs
component-types/tuple/src/: main.rs
errorHandling/Result/: Cargo.toml
errorHandling/Result/src/: hello.txt  main.rs
errorHandling/panicHandle/: Cargo.toml
errorHandling/panicHandle/src/: main.rs
first_1/: Cargo.toml
first_1/src/: main.rs
first_2/: Cargo.toml
first_2/src/: main.rs
first_3/: Cargo.toml
first_3/src/: main.rs
first_4/: Cargo.toml
first_4/src/: main.rs
first_5/: Cargo.toml
first_5/src/: main.rs
first_6/: Cargo.toml
first_6/src/: main.rs
first_7/: Cargo.toml
first_7/src/: main.rs
first_8/: Cargo.toml
first_8/src/: main.rs
first_9/: Cargo.toml
flowcontrol/src/: main.rs
functionalProgramming/closures/src/: main.rs
functionalProgramming/iterators/src/: main.rs
genericTraits/constGenerics/: Cargo.toml
genericTraits/traitObject/: Cargo.toml
genericsAndTraits/: Cargo.toml
lifetimeRust/advancedLifetime/: Cargo.toml
lifetimeRust/basicLifetime/: Cargo.toml
method/src/: main.rs
patternMatch/match-ifLet/: Cargo.toml
print-format/: Cargo.toml
print-format/src/: main.rs
typeConversion/asCohersion/: Cargo.toml
typeConversion/otherConversions/: Cargo.toml
(+10 files in other folders)
