[workspace]
members = [ "Ownership", "basicTypes_Numbers/char-bol-unit", "basicTypes_Numbers/functions", "basicTypes_Numbers/numbers", "basicTypes_Numbers/statement-expression", "borrowing",
	"first_1",
	"first_2", 
	"first_3", 
	"first_4", 
	"first_5", 
	"first_6", 
	"first_7", 
	"first_8", 
	"first_9",

] 
