[workspace]
members = [ "Ownership", "basicTypes_Numbers/char-bol-unit", "basicTypes_Numbers/functions", "basicTypes_Numbers/numbers", "basicTypes_Numbers/statement-expression", "borrowing", "collectionTypes/stringstype", "component-types/array", "component-types/eenum", "component-types/slice", "component-types/sstruct", "component-types/string", "component-types/tuple",
	"first_1",
	"first_2", 
	"first_3", 
	"first_4", 
	"first_5", 
	"first_6", 
	"first_7", 
	"first_8", 
	"first_9", "flowcontrol", "genericTraits/constGenerics", "genericTraits/generics", "genericTraits/traitObject", "genericTraits/traits", "method", "patternMatch/match-ifLet", "patternMatch/patterns",

] 
